Update TabUI.js & 4 files 1) TabUI.js 1차 완성     - 버블링, 캡쳐링 학습 후 stopPropagation()를 활용하여 우측 로그인 탭         클릭 위치에 따라 visible 상태 변경 되는 부분 airbnb 사이트와 같게 만듬. 2) 나머지 파일 조금씩 수정

--- a/public/stylesheets/index/root.css
+++ b/public/stylesheets/index/root.css
@@ -54,6 +54,14 @@ ul {
     display: none;
 }
 
+.visibility--hidden {
+    visibility: hidden;
+}
+
+.visibility--visible {
+    visibility: visible;
+}
+
 /* 전체 Wrapper */
 .all-wrapper {
     width: 1900px;
